@@ -1,17 +1,16 @@
 package com.csse.api.service;
 
-
 import com.csse.api.dto.wma.WMARequestDTO;
 import com.csse.api.dto.wma.WMAResponseDTO;
 import com.csse.api.model.WMA;
 import com.csse.api.repository.WMARepository;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class WMAService {
@@ -25,39 +24,43 @@ public class WMAService {
         this.modelMapper = modelMapper;
     }
 
-    public WMAResponseDTO createWMA(WMARequestDTO wmaRequestDTO) {
+    public ResponseEntity<WMAResponseDTO> createWMA(WMARequestDTO wmaRequestDTO) {
         WMA wma = modelMapper.map(wmaRequestDTO, WMA.class);
         WMA savedWMA = wmaRepository.save(wma);
-        return modelMapper.map(savedWMA, WMAResponseDTO.class);
+        WMAResponseDTO responseDTO = modelMapper.map(savedWMA, WMAResponseDTO.class);
+        return ResponseEntity.status(201).body(responseDTO); // Return 201 Created
     }
 
-    public Optional<WMAResponseDTO> getWMAById(String authorityId) {
-        return wmaRepository.findById(authorityId)
-                .map(wma -> modelMapper.map(wma, WMAResponseDTO.class));
-    }
-
-    public List<WMAResponseDTO> getAllWMAs() {
-        return wmaRepository.findAll()
-                .stream()
+    public ResponseEntity<List<WMAResponseDTO>> getAllWMAs() {
+        List<WMA> wmaList = wmaRepository.findAll();
+        List<WMAResponseDTO> responseDTOList = wmaList.stream()
                 .map(wma -> modelMapper.map(wma, WMAResponseDTO.class))
-                .collect(Collectors.toList());
+                .toList();
+        return ResponseEntity.ok(responseDTOList);
     }
 
-    public WMAResponseDTO updateWMA(String authorityId, WMARequestDTO wmaRequestDTO) {
-        if (wmaRepository.existsById(authorityId)) {
-            WMA wma = modelMapper.map(wmaRequestDTO, WMA.class);
-            wma.setAuthorityId(authorityId); // Ensure the ID is set correctly
-            WMA updatedWMA = wmaRepository.save(wma);
-            return modelMapper.map(updatedWMA, WMAResponseDTO.class);
-        }
-        return null; // Handle this case as appropriate
+    public ResponseEntity<WMAResponseDTO> getWMAById(Long authorityId) {
+        return wmaRepository.findById(authorityId)
+                .map(wma -> ResponseEntity.ok(modelMapper.map(wma, WMAResponseDTO.class)))
+                .orElseGet(() -> ResponseEntity.notFound().build());
     }
 
-    public boolean deleteWMA(String authorityId) {
+    public ResponseEntity<WMAResponseDTO> updateWMA(Long authorityId, WMARequestDTO wmaRequestDTO) {
+        return wmaRepository.findById(authorityId)
+                .map(wma -> {
+                    modelMapper.map(wmaRequestDTO, wma); // Update existing WMA
+                    WMA updatedWMA = wmaRepository.save(wma);
+                    return ResponseEntity.ok(modelMapper.map(updatedWMA, WMAResponseDTO.class));
+                })
+                .orElseGet(() -> ResponseEntity.notFound().build());
+    }
+
+    public ResponseEntity<Void> deleteWMA(Long authorityId) {
         if (wmaRepository.existsById(authorityId)) {
             wmaRepository.deleteById(authorityId);
-            return true;
+            return ResponseEntity.noContent().build();
+        } else {
+            return ResponseEntity.notFound().build();
         }
-        return false; // Handle this case as appropriate
     }
 }
